#9233 [기본 SCSS] itsm
- 일부 클래스명 변경
- 중복되는 속성의 클래스 제거

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1993,6 +1993,7 @@ button .icon-plus {
   font-family: 맑은고딕;
   font-size: 0.875rem;
   font-weight: 400;
+  padding-left: 0.625rem;
 }
 
 .itsm-container .contents-token {
@@ -2930,6 +2931,64 @@ button .icon-plus {
   background: #eaf1f7;
 }
 
+.itsm-popup {
+  padding: 1.875rem 2.5rem 1.25rem 2.5rem;
+  width: 100%;
+}
+
+.itsm-popup .related-instance-header h3.under-bar {
+  border-width: 0.0625rem;
+}
+
+.itsm-popup .related-instance-main {
+  margin-top: 0.9375rem;
+}
+
+.itsm-popup .related-instance-main .table-set {
+  margin-top: 2.188rem;
+}
+
+.itsm-popup .related-instance-main .table-set table {
+  width: 100%;
+}
+
+.itsm-popup .related-instance-main .table-set table thead tr {
+  color: #3F4B56;
+  border-bottom: 0.125rem solid #E1E3E6;
+}
+
+.itsm-popup .related-instance-main .table-set table tbody {
+  display: table;
+  width: 100%;
+  height: 32.5rem;
+  color: #586872;
+  overflow-y: auto;
+}
+
+.itsm-popup .related-instance-main .table-set table tbody tr {
+  display: table;
+  width: 100%;
+  height: 3.125rem;
+  line-height: 3.125rem;
+}
+
+.itsm-popup .related-instance-main .table-set table tbody tr td {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.itsm-popup .view {
+  padding: 0;
+}
+
+.itsm-popup .view-content {
+  height: 44.625rem;
+}
+
+.itsm-popup .view-content div.form-set {
+  margin: 0 0.6875rem 0 0.6875rem;
+}
+
 .search-area {
   height: 6.875rem;
   padding: 3.125rem 0 1.25rem 0;
@@ -2944,6 +3003,31 @@ button .icon-plus {
 .search-area .txt-num {
   color: #7E848C;
   margin-left: 0.623rem;
+}
+
+.horizontal-bar {
+  height: 0.0625rem;
+  margin: 0.625rem 0;
+  background-color: #EBEBEB;
+}
+
+.vertical-bar {
+  width: 1.875rem;
+  border-right: 0.0625rem solid #EBEBEB;
+  margin-right: 1.875rem;
+  min-height: 1.875rem;
+}
+
+.flex-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn-list {
+  padding: 0.625rem 0 0 0;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .profile-photo {
@@ -2961,18 +3045,16 @@ button .icon-plus {
   max-width: 8.75rem;
 }
 
+.user-align-item {
+  align-items: start;
+}
+
 .document-color-circle {
   height: 1rem;
   width: 1rem;
   border-radius: 50%;
   margin-right: 0.625rem;
   display: inline-block;
-}
-
-.horizontal-bar {
-  height: 0.0625rem;
-  margin: 0.625rem 0;
-  background-color: #EBEBEB;
 }
 
 .no-data-found {
@@ -3007,27 +3089,8 @@ button .icon-plus {
   text-align: center;
 }
 
-.btn-list {
-  padding: 0.625rem 0 0 0;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.vertical-bar {
-  width: 1.875rem;
-  border-right: 0.0625rem solid #EBEBEB;
-  margin-right: 1.875rem;
-  min-height: 1.875rem;
-}
-
 .notice-pinned {
-  background-color: rgba(135, 206, 255, 0.15);
+  background-color: #87CEFF;
 }
 
 .avatar {
@@ -3049,64 +3112,6 @@ button .icon-plus {
 
 .avatar-bottom-text {
   margin-bottom: 0.3125rem;
-}
-
-.popup {
-  padding: 1.875rem 2.5rem 1.25rem 2.5rem;
-}
-
-.popup .related-instance-header h3.under-bar {
-  border-width: 0.0625rem;
-}
-
-.popup .related-instance-main {
-  margin-top: 0.9375rem;
-}
-
-.popup .related-instance-main .table-set {
-  margin-top: 2.188rem;
-}
-
-.popup .related-instance-main .table-set table {
-  width: 100%;
-}
-
-.popup .related-instance-main .table-set table thead tr {
-  color: #3F4B56;
-  border-bottom: 0.125rem solid #E1E3E6;
-}
-
-.popup .related-instance-main .table-set table tbody {
-  display: table;
-  width: 100%;
-  height: 32.5rem;
-  color: #586872;
-  overflow-y: auto;
-}
-
-.popup .related-instance-main .table-set table tbody tr {
-  display: table;
-  width: 100%;
-  height: 3.125rem;
-  line-height: 3.125rem;
-}
-
-.popup .related-instance-main .table-set table tbody tr td {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.popup .view {
-  padding: 0;
-  width: auto;
-}
-
-.popup .view-content {
-  height: 44.625rem;
-}
-
-.popup .view-content div.form-set {
-  margin: 0 0.6875rem 0 0.6875rem;
 }
 
 /* _alerts.scss 
