--- a/src/main/resources/public/src/scss/theme/default/itsm.scss
+++ b/src/main/resources/public/src/scss/theme/default/itsm.scss
@@ -20,7 +20,7 @@
 @import '_buttons.scss';
 @import '_flex.scss';
 @import '_gnb.scss';
-@import '_container.scss';
+@import '_layout.scss';
 @import '../../template/_alerts.scss';
 @import '../../template/_scrollbars.scss';
 @import '../../template/_file-uploader.scss';
