--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -62,7 +62,7 @@
                     <select id="valueColumn"></select>
                 </div>
                 <div class="form-set">
-                    <div class="row">
+                    <div class="flex-row">
                         <label id="conditionLabel" th:text="#{customCode.label.condition}"></label>
                         <button class="default-line plus" onclick="addCondition()">
                             <span class="icon-plus"></span>
