--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -46,7 +46,7 @@
                     </label>
                 </div>
                 <div id="popTab" class="form_set">
-                    <div class="row">
+                    <div class="flex-row">
                         <div class="form-set col-6">
                             <label th:text="#{notice.label.height}" for="popHeight"></label>
                             <input type="text" id="popHeight" name="popHeight" class="px"
@@ -60,7 +60,7 @@
                                    oninput="maxLengthCheck(this)" />
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="flex-row">
                         <div class="form-set col-6">
                             <label th:text="#{notice.label.strtDt}" for="popStrtDt"></label>
                             <input type="text" id="popStrtDt" name="popStrtDt" class="date col-pct-12" />
@@ -80,7 +80,7 @@
                     </label>
                 </div>
                 <div id="topNoticeTab" class="form-set">
-                    <div class="row">
+                    <div class="flex-row">
                         <div class="form-set col-6">
                             <label th:text="#{notice.label.strtDt}" for="popStrtDt"></label>
                             <input type="text" id="topNoticeStrtDt" class="date col-pct-12" name="topNoticeStrtDt"/>
