--- a/src/main/resources/public/template/token/tokenEditTab.html
+++ b/src/main/resources/public/template/token/tokenEditTab.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
         </div>
-        <div class="related-add flex-row justify-content-center align-items-center">
+        <div class="related-add justify-content-center align-items-center">
             <button th:onclick="openPopUp([[${tokenId}]])">
                 <span class="icon-plus"></span>
             </button>
