--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -531,6 +531,7 @@ input, button, select, optgroup, textarea {
   border: 0.0625rem solid #EBEBEB;
   background-color: #F7F8F9;
   margin: 0.625rem 0.625rem 0 0;
+  display: flex;
 }
 
 .document-container .token-properties .token-info-contents .token-comment {
