--- a/src/main/resources/public/template/boardAdmin/boardCategoryEdit.html
+++ b/src/main/resources/public/template/boardAdmin/boardCategoryEdit.html
@@ -19,7 +19,7 @@
                 <label th:text="#{board.label.name}"></label>
                 <input th:value="${boardAdmin.boardAdminTitle}" disabled>
             </div>
-            <div class="row">
+            <div class="flex-row">
                 <div class="form-set col-8">
                     <label class="required" th:text="#{board.label.categoryName}" for="boardCategoryName"></label>
                     <input type="text" id="boardCategoryName" maxlength="100" required="required"/>
