--- a/src/main/resources/public/template/layout/popupLayout.html
+++ b/src/main/resources/public/template/layout/popupLayout.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="alice-wrapper">
-        <div class="popup">
+        <div class="itsm-popup">
             <th:block layout:fragment="content"></th:block>
         </div>
     </div>
