--- a/src/main/resources/public/template/portal/download/downloadSearch.html
+++ b/src/main/resources/public/template/portal/download/downloadSearch.html
@@ -27,7 +27,7 @@
             </form>
         </div>
     </div>
-    <div class="portal-search-result">
+    <div class="main">
         <div class="list" id="downloadList"></div>
     </div>
 </th:block>
