--- a/src/main/resources/public/template/portal/notice/noticeSearch.html
+++ b/src/main/resources/public/template/portal/notice/noticeSearch.html
@@ -24,7 +24,7 @@
             </form>
         </div>
     </div>
-    <div class="portal-search-result">
+    <div class="main">
         <div class="list" id="noticeList"></div>
     </div>
 </th:block>
