--- a/src/main/resources/public/template/portal/portalList.html
+++ b/src/main/resources/public/template/portal/portalList.html
@@ -4,10 +4,10 @@
 <body>
 <div class="list">
     <input th:type="hidden" id="totalCount" name="totalCount" th:value="${totalCount}"/>
-    <div class="row" th:each="portalList : ${portalList}">
-        <div class="type-icon" th:classappend="${portalList.tableName} != '' ? ${portalList.tableName}"></div>
-        <div class="content-box">
-            <h5 class="title underline text-ellipsis" th:switch="${portalList.tableName}">
+    <div class="row flex-row align-items-center" th:each="portalList : ${portalList}">
+        <img th:src="@{|/assets/media/images/portal/img_portal_${portalList.tableName}.png|}" width="30" height="30">
+        <div class="item-box">
+            <h5 class="item-title underline text-ellipsis" th:switch="${portalList.tableName}">
                 <a th:case="#{'notice'}" th:href="@{/portal/notices/{id}/view(id=${portalList.portalId})}"
                    th:if="${portalList.portalTitle != null}" th:text="${portalList.portalTitle}"></a>
                 <a th:case="#{'faq'}" th:href="@{/portal/faqs?id={id}(id=${portalList.portalId})}"
@@ -16,10 +16,8 @@
                    th:if="${portalList.portalTitle != null}"
                    th:text="${portalList.portalTitle}"></a>
             </h5>
-            <div class="content" th:switch="${portalList.tableName}">
-                <div class="text-ellipsis" th:case="#{'download'}"
-                     th:text="#{${portalList.portalContent}}"></div>
-                <div class="content text-ellipsis" th:case="*" th:text="${portalList.portalContent}"></div>
+            <div class="item-content">
+                <div class="text-ellipsis" th:text="#{${portalList.portalContent}}"></div>
             </div>
         </div>
     </div>
