--- a/src/main/resources/public/src/scss/portal/_layout.scss
+++ b/src/main/resources/public/src/scss/portal/_layout.scss
@@ -1,35 +1,282 @@
 @import '../template/_layout.scss';
 
+/*
+ * portal 화면 layout
+ * 파일 경로 : portal/_layout.scss
+ *
+ * portal-container - header : 상단
+ *                  - main : 메인 (스크롤바)
+ *                         - main-header : 메인 상단 (메뉴 타이틀, 설명 등)
+ *                         - main-search : 검색 영역
+ *                         - main-content : 내용, 검색 결과 영역
+ */
+
+ @include keyframe (slideDown) {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@include keyframe (slideUp) {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .portal-container {
-  overflow: auto;
-  height: 100vh;
-  width: 100vw;
   @include container;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
 
   .header {
-    max-width: 120rem;
-    background-color: $point-blue;
-    color: $white;
-    font-weight: $font-weight-medium;
-    padding: 0 1.25rem; // 20px
     @include header;
+    font-size: $layout-header-font-size;
+    font-weight: $layout-header-font-weight;
+    color: $layout-header-font-color;
+    background-color: $layout-header-bg-color;
+    padding: 0 1.25rem; // 0 20px
 
-    .title {
+    // Technical Support 문구
+    .name {
       font-size: 1.125rem; // 18px
-      font-weight: $font-weight-medium;
-      margin-left: 0.625rem; // 10px
+      padding: 0 0.9375rem; // 0 15px
+    }
+    // 로그인 링크
+    a { color: $layout-header-font-color; }
+  }
+  // 포탈 메인
+  .main {
+    @include main;
+
+    &-header {
+      height: $main-header-height;
+      background-color: $main-search-bg-color;
+      
+      .title { padding: 3.625rem 0 0.625rem 0; } // 58px 0px 10px 0px 
     }
 
-    .login {
-      font-size: 1rem; // 16px
-      font-weight: 500;
-      cursor: pointer;
+    &-search {
+      height: $main-search-height;
+      background-color: $main-search-bg-color;
+      border-bottom: $main-header-border;
+      padding: 3rem 0; // 48px 0
+
+      // 포탈 메인 화면이 슬라이딩 되면, 리스트 영역의 너비가 변경됨
+      &.slide-up {
+        + .portal-search-result .list {
+          height: calc(#{$main-header-height} + #{$content-list-height});
+        }
+      }
+      &.slide-down {
+        + .portal-search-result .list {
+          height: $content-list-height;
+        }
+      }
+    }
+    
+    &-content {
+      .card-group {
+        padding: 3.4375rem 12.75rem 0 12.75rem; // 55px 220px 0 220px
+        .card {
+          width: 30rem; // 480px
+          border: $card-border;
+  
+          &-header {
+            padding-top: 3.4375rem; // 55px
+            .icon { 
+              padding-bottom: 1.25rem; // 20px
+              img { cursor: pointer; }
+            }
+          }
+          // 목록
+          &-list {
+            padding: 2.188rem 1.875rem 2.813rem 1.875rem; // 35px 30px 45px 30px
+  
+            table {
+              width: 100%;
+              height: 100%;
+              th, td {
+                padding: 0 1.25rem 0 1.25rem; // 20px
+                vertical-align: middle;
+                &:hover { background-color: rgba(230, 232, 235, 0.6); }
+  
+                a { color: $dark-gray; }
+              }
+            }
+          }
+        }
+      }
+      // 포탈 메인 검색 결과
+      .list {
+        height: $portal-search-result-list-height;
+        padding: 2.625rem 22.5rem 0 22.5rem; // 42px 360px 0 360px
+  
+        .row {
+            width: 100%;
+            border-bottom: $list-bottom-border;
+            padding: 0.8125rem 0; // 13px 0
+            // 마지막 row
+            &:last-child {
+              margin: 0 0 3.125rem 0; //50px
+              border-bottom: none;
+            }
+  
+            img {
+              width: 1.875rem; // 30px
+              height: 1.875rem; // 30px
+              margin-right: 0.938rem; // 15px
+            }
+  
+            .item {
+              &-box { width:  68.13rem; } // 1090px
+              &-title {
+                padding-bottom: 0.5rem; // 8px
+  
+                a { color: $headings-font-color; }
+              }
+              &-content {
+                font-size: 1rem; // 16px
+                font-weight: $font-weight-regular;
+                color: $dark-gray;
+  
+                .keyword { color: $keyword-font-color; }
+              }
+            }
+  
+            .no-data {
+                margin: 4.375rem 0 0 0; //70px
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+      }
     }
   }
+  // FAQ
+  // .main > .faq
+  .faq {
+    &-header {
+      height: $faq-layout-header-height;
+      padding: 0 0 0 13.75rem; // 220px
+      background-color: $faq-layout-header-bg-color;
+      border-bottom: $faq-layout-header-border;
 
-  .portal-contents {
-    height: 100%;
-    margin-top: $layout-header-height;
-    overflow: hidden;
+      &-title {
+        padding: 3.75rem 0; // 60px 0
+        // 설명
+        .description { margin-left: 0.625rem; } // 10px
+      }
+    }
+    // 검색 조건
+    //&-search {}
+    // 검색 결과
+    &-content {
+      margin: 3.375rem 13.75rem 0 13.75rem; // 54px 220px 0 220px
+      
+      .faq {
+        // level 1
+        &-group {
+          position: relative;
+          min-height: 3.438rem; // 55px
+          border: $faq-group-border;
+          border-radius: 0.0625rem; // 1px
+          margin-bottom: 10px; // 10px
+
+          &-title {
+            height: 3.438rem; // 55px
+            font-size: $faq-group-font-size;
+            font-weight: $faq-group-font-weight;
+            color: $faq-group-font-color;
+            padding: 1.25rem 0.9375rem; // 20px 15px
+            border-bottom: $faq-group-border-width solid transparent; // 1px
+            // 그룹일 경우 summary의 화살표 숨김
+            &::-webkit-details-marker { display: none; }
+            .icon-plus {
+              position: absolute;
+              right: 0.9375rem; // 15px
+              display: inline-block;
+              opacity: 1;
+              @include maskImage('#{$icon-folder-path}icon_plus.svg', 16px, 16px, no-repeat, center, 16px 16px, $pressed-gray);
+            }
+  
+            .icon-minus {
+              position: absolute;
+              right: 0.9375rem; // 15px
+              display: inline-block;
+              opacity: 0;
+              @include maskImage('#{$icon-folder-path}icon_minus.svg', 16px, 16px, no-repeat, center, 16px 16px, $pressed-gray);
+            }
+          }
+
+          &[open] {
+            border: $faq-group-opened-border;
+            .faq-group-title { 
+              color: $faq-group-opened-font-color; 
+              border-bottom-color: $faq-group-opened-border-color;
+              .icon-plus { opacity: 0; }
+              .icon-minus { 
+                background: $faq-group-opened-font-color;
+                opacity: 1;
+              }
+            }
+            .faq-row { background-color: $faq-row-opened-bg-color; }
+          }
+        }
+        // level 2
+        &-row {
+          padding: 20px 30px 0px 30px; // 20px 30px 0px 30px;
+          &:first-of-type { padding-top: 35px; } // 30px
+          &:last-of-type { padding-bottom: 35px; } // 30px
+
+          &-title {
+            font-size: $faq-row-font-size;
+            font-weight: $faq-row-font-weight;
+            color: $faq-row-font-color;
+          }
+          // 가로 줄
+          .horizontal-bar {
+            height: 0.0625rem; // 1px
+            margin: 0.9375rem 0; // 15px
+            background-color: $faq-row-border-color;
+          }
+
+          &[open] {
+            .horizontal-bar { background-color: $faq-row-opened-border-color; }
+          }
+        }
+        // level 3
+        &-row-content {
+          font-size: $faq-row-content-font-size;
+          font-weight: $faq-row-content-font-weight;
+          color: $faq-row-content-font-color;
+          margin-top: 20px; // 20px
+          margin-left: 17px; // 17px
+        }
+      }
+    }
   }
+}
+
+// 슬라이드 효과
+.slide-down {
+  display: block;
+  @include animation (0s, 0.3s, slideDown, ease-out);
+}
+
+.slide-up {
+  @include animation (0s, 0.3s, slideUp, ease-out);
 }
