--- a/src/main/resources/public/template/layout/portalLayout.html
+++ b/src/main/resources/public/template/layout/portalLayout.html
@@ -13,13 +13,11 @@
                     <a href="/portal/portalMain">
                         <img class="logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="174.72" height="25" alt="Alice">
                     </a>
-                    <div class="title" th:text="#{portal.label.mainPhrase}"></div>
-                    <div class="login ml-auto" sec:authorize="isAuthenticated()" onclick="location.href='/layout'"
-                            th:text="#{portal.label.main}"></div>
-                    <div class="login ml-auto" sec:authorize="isAnonymous()" onclick="location.href='/login'"
-                            th:text="#{portal.label.login}"></div>
+                    <div class="name" th:text="#{portal.label.mainPhrase}"></div>
+                    <a class="ml-auto" href="/layout" sec:authorize="isAuthenticated()" th:text="#{portal.label.main}"></a>
+                    <a class="ml-auto" href="/login" sec:authorize="isAnonymous()" th:text="#{portal.label.login}"></a>
                 </div>
-                <div class="portal-contents">
+                <div class="main">
                     <th:block layout:fragment="content"></th:block>
                 </div>
             </div>
