--- a/src/main/resources/public/template/portal/faq/portalFaqList.html
+++ b/src/main/resources/public/template/portal/faq/portalFaqList.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-	<meta charset="UTF-8">
-	<link th:href="@{/assets/css/portal.css}" rel="stylesheet"/>
-</head>
 <body>
-	<div class="list-body">
-		<div class="selected-group" th:id=${faqs.faqSelected.faqGroup}></div>
-		<div class="selected-id" th:id=${faqs.faqSelected.faqId}></div>
-		<details class="faq-group" th:each="faqGroup:${faqs.faqGroupList}" th:id="${faqGroup}">
-			<summary class="faq-group" th:text="#{|common.code.${faqGroup}|}"></summary>
-			<details class="faq-title" th:each="faqT:${faqs.faqList}" th:if="${faqT.faqGroup} == ${faqGroup}" th:id="${faqT.faqId}">
-				<summary class="faq-title" th:text="${faqT.faqTitle}"></summary>
-				<div class="horizontal-bar"></div>
-				<div class="faq-contents" th:each="faqC:${faqs.faqList}" th:if="${faqC.faqId} == ${faqT.faqId}">
-					<p class="text-ellipsis" th:text="${faqC.faqContent}"></p>
-				</div>
-			</details>
+    <input type="hidden" id="selected-group" th:value="${faqs.faqSelected.faqGroup}"/>
+	<input type="hidden" id="selected-id" th:value="${faqs.faqSelected.faqId}"/>
+
+	<details class="faq-group" th:each="faqGroup:${faqs.faqGroupList}" th:id="${faqGroup}">
+		<summary class="faq-group-title">
+			<span th:text="#{|common.code.${faqGroup}|}"></span>
+			<span class="icon-plus"></span>
+			<span class="icon-minus"></span>
+		</summary>
+		<details class="faq-row" th:each="faqT:${faqs.faqList}" th:if="${faqT.faqGroup} == ${faqGroup}" th:id="${faqT.faqId}">
+			<summary class="faq-row-title" th:text="${faqT.faqTitle}"></summary>
+			<div class="horizontal-bar"></div>
+			<div class="faq-row-content" th:each="faqC:${faqs.faqList}" th:if="${faqC.faqId} == ${faqT.faqId}">
+				<p class="text-ellipsis" th:text="${faqC.faqContent}"></p>
+			</div>
 		</details>
-	</div>
+	</details>
 </body>
 </html>
