--- a/src/main/resources/public/src/scss/portal/_buttons.scss
+++ b/src/main/resources/public/src/scss/portal/_buttons.scss
@@ -62,3 +62,9 @@
   color: $white;
   padding: 0.75rem 1.563rem; // 12px 25px
 }
+
+// 에러 발생시 이전 페이지로 돌아가기
+.btn-error {
+  color: $white;
+  background-color: $point-blue;
+}
