--- a/src/main/resources/public/src/scss/portal/_elements.scss
+++ b/src/main/resources/public/src/scss/portal/_elements.scss
@@ -1,49 +1,75 @@
 @import "../template/_elements.scss";
 
-h1.title {
-  padding: 0.625rem 0 0.625rem 0.3125rem; // 10px 0 10px 5px
-}
-
-h3.under-bar {
-  padding-bottom: 0.625rem; // 10px
-  margin-bottom: 0.625rem; //10px
-  border-bottom: 0.125rem solid $default-gray; // 2px
-  margin-top: 3.125rem; // 50px
-  &:first-of-type {
-    margin-top: 0;
-  }
-}
-
-h4.under-bar {
-  padding-bottom: 0.625rem; // 10px
-  margin-bottom: 0.625rem; //10px
-  border-bottom: 0.125rem solid $default-gray; // 2px
-}
-
 select {
-  margin-right: 0.0625rem; // 1px
   vertical-align: middle;
 }
 
 label {
   display: inline-block;
-  margin-bottom: 0.5rem; // 8px
-  margin-top: 1rem; // 16px
+  margin: 1rem 0 0.5rem 0; // 16px 0 8px 0
 }
 
 input {
-    &.icon-search {
-        background: url($icon-folder-path + "icon_search.svg") no-repeat 100%-3 50%;
-        background-color: $element-bg-color;
-    }
-    &.search-date {
-        background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
-        background-color: $element-bg-color;
-    }
+  &.icon-search {
+    background: url($icon-folder-path + "icon_search.svg") no-repeat 100%-3 50%;
+    background-color: $element-bg-color;
+  }
+  &.icon-date {
+    background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
+    background-color: $element-bg-color;
+  }
 }
 
 summary {
   cursor: pointer;
 
   &:focus { outline: none; }
+}
+
+table { 
+  width: 100%;
+  thead {
+    display: block;
+    tr {
+      display: flex;
+      height: 2.125rem; //34px
+      border-bottom: 0.125rem solid $default-gray;
+      th {
+        color: $table-th-font-color;
+        vertical-align: middle;
+        &:first-child {
+          padding-left: 1.25rem; // 20px
+        }
+      }
+    }
+  }
+  tbody {
+    display: block;
+    height: $table-body-height;
+    tr {
+      display: table;
+      table-layout: fixed;
+      width: 100%;
+      height: 3.375rem; // 54px
+      td {
+        font-size: $table-td-font-size;
+        font-weight: $table-td-font-weight;
+        color: $table-td-font-color;
+        vertical-align: middle;
+
+        &:first-child {
+          padding-left: 1.25rem; // 20px
+        }
+
+        a { color: $table-td-font-color; }
+      }
+      &.no-data-found-list {
+        background-color: $no-data-found-bg-color;
+        pointer-events: none;
+      }
+      &:hover {
+        background-color: $table-row-hover-bg-color;
+      }
+    }
+  }
 }
