--- a/src/main/resources/public/src/scss/portal/_error.scss
+++ b/src/main/resources/public/src/scss/portal/_error.scss
@@ -1,60 +1,36 @@
-.error-body {
-  width: 100vw;
+/*
+ * 에러
+ * 파일 경로 : _error.scss
+ * URL : /error
+ */
+
+.error-background {
+  width: 50vw;
   height: 100vh;
-  margin: 0;
-  padding: 0;
+  background-color: $error-bg-color;
   overflow: hidden;
-}
-
-.error-div {
-  width: 100vw;
-  height: 100vh;
-
-  .error-div-left {
-    width: 50%;
-    height: 100%;
-    float: left;
-    background-color: #F2F5F9;
-  }
 
   .error-img {
     position: relative;
     top: -59.1875rem; // -947px
     margin: 5rem 0 0 5rem; // 80px 80px
   }
-
-  .error-div-right {
-    float: right;
-    background-color: #FFFFFF;
-    padding: 16.875rem 6.25rem; // 270px 100px
-    border-left: 1px solid $line-gray;
-
-    h1 {
-      line-height: 1.7;
-    }
-
-    .error-code-txt {
-      margin: 1.25rem 0; // 20px
-      font-size: 1.5rem; // 24px
-      color: $point-blue;
-      font-weight: 500;
-    }
-
-    .error-bottom-txt {
-      margin: 5rem 0; // 80px
-      font-size: 1.5rem; // 24
-      color: $dark-gray;
-      font-weight: 500;
-    }
-  }
 }
 
-.error-btn {
-  background-color: $point-blue;
-  color: #FFFFFF;
-  font-size: 1rem; // 16px
-  font-weight: 500;
-  height: 2.5rem; // 40px
-  border-radius: 0.0625rem; // 1px
-  border-width: 0.0625rem; // 1px
+.error-form {
+  width: 50vw;
+  padding: 16.875rem 5.625rem; // 270px 90px
+  border-left: $error-border;
+
+  h1 { line-height: 1.7; }
+
+  .error-code-txt {
+    margin: 1.25rem 0; // 20px
+    color: $point-blue;
+  }
+
+  .error-bottom-txt {
+    color: $dark-gray;
+    margin: 5rem 0; // 80px
+  }
 }
