--- a/src/main/resources/public/src/scss/portal/_login.scss
+++ b/src/main/resources/public/src/scss/portal/_login.scss
@@ -1,93 +1,76 @@
+/*
+ * 로그인
+ * 파일 경로 : portal/_login.scss
+ */
 .login {
-    &-logo {
-        position: relative;
-        top: 5rem; // 80px
-        left: 5rem; // 80px
+  &-logo {
+    position: relative;
+    top: $login-logo-position-top;
+    left: $login-logo-position-left;
+  }
+
+  &-background {
+    width: calc(100vw - #{$login-form-width});
+    height: 100%;
+    background-color: $login-bg-color;
+    overflow: hidden;
+
+    .login-main-image {
+      margin: 6.875rem 0 0 6.875rem; // 110px 0 0 110px
+    }
+  }
+
+  &-form {
+    width: $login-form-width;
+    padding: 8.5rem 4.0625rem 0 4.0625rem; // 136px 65px 0 65px
+    h1 {
+      height: 2.313rem; // 37px
+      margin-bottom: 3.75rem; // 60px
     }
 
-    &-background {
-        background-color: $point-blue;
-        height: 100%;
-        width: 80.3125rem; // 1285px;
-        color: $white;
-        .login-main-image {
-            margin-top: 0.9375rem; // 15px;
-            margin-left: 6.875rem; // 110px
-            height: 44.375rem; // 710px
-            width: 66.9375rem; // 1071px
-        }
+    .login-base-form {
+      margin-bottom: 1rem; // 16px
     }
-    &-form {
-        margin: 8.5rem 4.0625rem 0 4.0625rem; // 136px 65px 0 65px
-        width: 30rem; // 480px
-        h1 {
-            height: 2.313rem; // 37px
-            margin-bottom: 3.75rem; // 60px
-            text-align: center;
-        }
+  }
 
-        .login-base-form {
-            margin-bottom: 1rem; // 16px
-            display: flex;
-            flex-direction: column;
-        }
+  &-divide {
+    flex-basis: 100%;
+    color: $gray;
+    font-size: $login-form-font-size;
+    margin: 4rem 0 4rem 0; // 64px 0 64px 0
+
+    &::before {
+      content: '';
+      flex-grow: 1;
+      background: $line-gray;
+      height: 0.063rem; // 1px
+      margin-right: 1rem; // 16px
     }
 
-    &-divide {
-        display: flex;
-        flex-basis: 100%;
-        align-items: center;
-        color: $gray;
-        font-size: 1rem; // 16px
-        margin: 4rem 0 4rem 0; // 64px 0 64px 0
-
-        &::before {
-            content: '';
-            flex-grow: 1;
-            background: $line-gray;
-            height: 0.063rem; // 1px
-            margin-right: 1rem; // 16px
-        }
-
-        &::after {
-            content: '';
-            flex-grow: 1;
-            background: $line-gray;
-            height: 0.063rem; // 1px
-            margin-left: 1rem; // 16px
-        }
+    &::after {
+      content: '';
+      flex-grow: 1;
+      background: $line-gray;
+      height: 0.063rem; // 1px
+      margin-left: 1rem; // 16px
     }
+  }
 
-    &-platform {
-        button {
-            margin-bottom: 1rem; // 16px
+  &-platform {
+    button {
+      margin-bottom: 1rem; // 16px
 
-            &:last-child {
-                margin: 0;
-            }
-        }
+      &:last-child { margin: 0; }
     }
+  }
 
-    &-other {
-        margin-top: 6.188rem; // 99px
-        height: 1.063rem; // 17px
-        display: flex;
-        font-size: 1rem; // 16px
-        font-weight: 400;
-        color: #7b8593;
-        text-align: center;
+  &-other {
+    height: 1.063rem; // 17px
+    font-size: $login-form-font-size;
+    font-weight: $login-form-font-weight;
+    color: $login-form-font-color;
+    margin-top: 6.188rem; // 99px
 
-        &-signUp, &-findPwd, &-findId {
-            flex: 1;
-            border-right: 0.063rem solid #7b8593; // 1px
-
-            a {
-                color: $dark-gray;
-            }
-
-            &:last-child {
-                border: none;
-            }
-        }
-    }
+    a { color: $login-form-font-color; }
+  }
 }
