--- a/src/main/resources/public/src/scss/portal/_signup.scss
+++ b/src/main/resources/public/src/scss/portal/_signup.scss
@@ -1,48 +1,46 @@
+/*
+ * 회원 가입
+ * 파일 경로 : portal/_signup.scss
+ */
 .signup {
-    &-logo {
-        position: relative;
-        top: 5rem; // 80px
-        left: 5rem; // 80px
-    }
+  &-logo {
+    position: relative;
+    top: $signup-logo-position-top;
+    left: $signup-logo-position-left;
+  }
 
-    &-background {
-        background-color: $point-blue;
-        height: 100%;
-        width: 80.3125rem;
-        .signup-main-image {
-            position: inherit;
-            margin-top: 1.6875rem; // 27px
-            width: inherit;
-            height: initial;
-        }
+  &-background {
+    width: calc(100vw - #{$signup-form-width});
+    height: 100%;
+    background-color: $signup-bg-color;
+    overflow: hidden;
+
+    .signup-main-image {
+      margin-top: 0.8125rem; // 13px
     }
+  }
 
 
-    &-login-face {
-        position: inherit;
-        top: 5rem; // 80px
-        float: right;
-        margin: 5rem 5rem 0 0; // 80px 80px 0 0
-    }
+  &-login-face {
+    top: 5rem; // 80px
+    float: right;
+    margin: 5rem 5rem 0 0; // 80px 80px 0 0
+  }
 
-    &-login-note {
-        font-weight: 500; // Medium
-        color: $white;
-        vertical-align: middle;
-    }
+  &-login-note {
+    font-weight: $font-weight-medium;
+    color: $white;
+    vertical-align: middle;
+  }
 
-    &-form {
-        margin: 5.6875rem 8.0rem 0rem 88.9063rem; // 91px 128px 0 1422.5px
-        width: 22.5rem; // 360px
-        position: absolute;
-        top: 0;
-        h1 {
-            margin-bottom: 0.625rem; // 10px
-            text-align: center;
-        }
-        .signup-base-form {
-            display: flex;
-            flex-direction: column;
-        }
+  &-form {
+    width: $signup-form-width;
+    padding: 5.6875rem 4.0625rem 0 4.0625rem; // 91px 65px 0 65px
+    h1 {
+      margin-bottom: 0.625rem; // 10px
     }
+    .signup-base-form {
+      position: relative; // tooltip 영역 지정 용도
+    }
+  }
 }
