--- a/src/main/resources/public/template/portal/download/downloadView.html
+++ b/src/main/resources/public/template/portal/download/downloadView.html
@@ -8,26 +8,23 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="portal-search-header">
-        <div class="contents-view">
-            <div class="page-title">
-                <h1 th:text="#{download.label.download}"></h1>
-                <h6 class="description" th:text="#{download.msg.portalDescription}"></h6>
-            </div>
+    <div class="download-header">
+        <div class="header-title flex-row align-items-baseline">
+            <h1 th:text="#{download.label.download}"></h1>
+            <h6 class="description" th:text="#{download.msg.portalDescription}"></h6>
         </div>
     </div>
-    <div class="portal-search-view">
-        <div class="flex flex-column">
-            <h4 class="under-bar" th:text="#{${download.downloadTitle}}"></h4>
-            <div class="row-right">
+    <div class="download-content">
+        <div class="view flex-column flex-fill">
+            <div class="view-title text-ellipsis" th:text="#{${download.downloadTitle}}"></div>
+            <div class="view-sub-title flex-row justify-content-end">
                 <span id="spanCreateDt" th:text="${download?.createDt}"></span>
                 <span class="vertical-bar"></span>
                 <span th:text="${download?.createUserName}"></span>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="flex-item item-text">
-                <h5 th:text="#{download.label.category}"></h5>
-                <span th:text="#{${download.downloadCategory}}"></span>
+            <div class="view-content flex-row">
+                <span class="view-text" th:text="#{${download.downloadCategory}}"></span>
             </div>
             <div class="horizontal-bar"></div>
             <div class="file-uploader-view">
@@ -41,7 +38,7 @@
                 </form>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="btn-bar">
+            <div class="view-btn-content flex-row justify-content-end">
                 <a class="btn default-line" href="/portal/downloads/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
@@ -55,8 +52,7 @@
             document.getElementById('spanCreateDt').textContent =
                 i18n.userDateTime(document.getElementById('spanCreateDt').textContent);
             portalFileUploader.init({extra: {formId: 'downloadForm', ownId: [[${download.downloadId}]], editor: false, isView: true}});
-            OverlayScrollbars(document.querySelector('.view-text'), {className: 'scrollbar'});
-            OverlayScrollbars(document.querySelector('.view-attach-file'), {className: 'scrollbar'});
+            OverlayScrollbars(document.querySelector('.main'), { className: 'scrollbar' });
         };
         /*]]>*/
     </script>
