--- a/src/main/resources/public/template/portal/faq/portalFaq.html
+++ b/src/main/resources/public/template/portal/faq/portalFaq.html
@@ -9,7 +9,7 @@
 <body>
 <th:block layout:fragment="content">
 	<div class="faq-header">
-		<div class="faq-header-title flex-row align-items-baseline">
+		<div class="header-title flex-row align-items-baseline">
 			<h1 th:text="#{faq.label.list}"></h1>
 			<h6 class="description" th:text="#{faq.label.description}"></h6>
 		</div>
