--- a/src/main/resources/public/template/portal/notice/noticeView.html
+++ b/src/main/resources/public/template/portal/notice/noticeView.html
@@ -8,25 +8,23 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="portal-search-header">
-        <div class="contents-view">
-            <div class="page-title">
-                <h1 th:text="#{notice.label.list}"></h1>
-                <h6 class="description" th:text="#{notice.msg.viewDescription}"></h6>
-            </div>
+    <div class="notice-header">
+        <div class="header-title flex-row align-items-baseline">
+            <h1 th:text="#{notice.label.list}"></h1>
+            <h6 class="description" th:text="#{notice.msg.viewDescription}"></h6>
         </div>
     </div>
-    <div class="portal-search-view">
-        <div class="flex flex-column">
-            <h4 class="under-bar" th:text="${notice?.noticeTitle}"></h4>
-            <div class="row-right">
+    <div class="notice-content">
+        <div class="view flex-column flex-fill">
+            <div class="view-title text-ellipsis" th:text="${notice?.noticeTitle}"></div>
+            <div class="view-sub-title flex-row justify-content-end">
                 <span id="spanCreateDt" th:text="${notice.createDt}"></span>
                 <span class="vertical-bar"></span>
                 <span th:text="${notice?.aliceUserEntity.userName}"></span>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="flex-item item-text">
-                <pre><span th:text="${notice?.noticeContents}"/></pre>
+            <div class="view-content flex-row">
+                <span class="view-text auto-break" th:text="${notice?.noticeContents}"/>
             </div>
             <div class="horizontal-bar"></div>
             <div class="file-uploader-view">
@@ -40,7 +38,7 @@
                 </form>
             </div>
             <div class="horizontal-bar"></div>
-            <div class="btn-bar">
+            <div class="view-btn-content flex-row justify-content-end">
                 <a class="btn default-line" href="/portal/notices/search" th:text="#{common.btn.list}"></a>
             </div>
         </div>
@@ -60,8 +58,7 @@
                 return history.go(-1);
             }
             portalFileUploader.init({extra: {formId: 'frm', ownId: noticeNo, editor: false, isView: true}});
-            OverlayScrollbars(document.querySelector('.view-text'), {className: 'scrollbar'});
-            OverlayScrollbars(document.querySelector('.view-attach-file'), {className: 'scrollbar'});
+            OverlayScrollbars(document.querySelector('.main'), { className: 'scrollbar' });
         }
         /* ]]> */
     </script>
