--- a/src/main/resources/public/template/sessionInvalid.html
+++ b/src/main/resources/public/template/sessionInvalid.html
@@ -9,11 +9,11 @@
 <body>
 <div class="alice-wrapper">
     <div class="portal-container flex-row">
-        <div class="session-div-left">
+        <div class="session-background float-left">
             <img th:src="@{/assets/media/images/session/img_session_main.png}"/>
             <img th:src="@{/assets/media/images/session/img_session_logo_alice.png}" class="session-img">
         </div>
-        <div class="session-div-right">
+        <div class="session-form float-right">
             <h1 th:text="#{login.msg.sessionExpired}"></h1>
             <div class="flex-row">
                 <h1 id="counter" class="session-count-txt"></h1>
